@@ -2,7 +2,6 @@ package kdt.prgms.springbootboard.global.error;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
@@ -58,7 +57,7 @@ public class ErrorResponse {
                     error.getField(),
                     error.getRejectedValue() == null ? "" : error.getRejectedValue().toString(),
                     error.getDefaultMessage()))
-                .collect(Collectors.toList());
+                .toList();
         }
     }
 }
